--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Get the Top k elements from a large bunch of numbers, using min-heap.
-To be continued..
+Basicly done. Need more tough testing.
 --
 xiaojie.zhang
